style linked and some style added

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Travel Blog</title>
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
       href="https://c8.alamy.com/comp/2J9YT40/vacation-icon-simple-line-element-travel-symbol-for-templates-web-design-and-infographics-2J9YT40.jpg"
     />
   </head>
   <body>
-    <!-- This is head section -->
-    <h1><i>My Travel Blog</i></h1>
-    <!-- This is div section -->
-    <div class="myDiv">
+    <header>
+      <h1><i>My Travel Blog</i></h1>
+    </header>
+
+    <div class="experience">
       <h3>My experience:</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
@@ -21,7 +23,7 @@
         et, aperiam eveniet magnam laudantium deleniti non consectetur laborum
         odit modi hic.
       </p>
-      <button>Read more</button> <br />
+      <button class="moreButton">Read more</button> <br />
       <br />
     </div>
     <span>
